maj image et cv

--- a/experiences.html
+++ b/experiences.html
@@ -12,7 +12,7 @@
         <div class="scroll">
             <div class="scroll_color">
                 <div class="avatar">
-                    <img src="images/bellette.svg" width="200" height="200" onmouseover="this.src='images/bellettec.svg';" onmouseout="this.src='images/bellette.png'" alt="Avatar" />
+                    <img src="images/bellette.png" width="200" height="200" onmouseover="this.src='images/bellettec.png';" onmouseout="this.src='images/bellette.png'" alt="Avatar" />
                 </div>
                 <div class="nom">
                     <h1>Jessica <br> Da Silva Cunha </h1>
