maj image et cv

--- a/motivation.html
+++ b/motivation.html
@@ -28,7 +28,7 @@
                 <h2>Motivation</h2>
 	            <div class="lettre">
 		            <p>Madame, Monsieur,</p>
-                    <p>Pour une lettre de motivation fade et remplie de clichés que je suis censée écrire parce que c’est la norme :<br> cliquez-ici.</p>
+                    <p>Pour une lettre de motivation fade et remplie de clichés que je suis censée écrire parce que c’est la norme :<br><a href="lm_moi.pdf" target="_blank"> Cliquez ici</a></p>
                     <p>Pour une lettre de motivation à moitié copiée sur Google avec des modèles gratuits semi-personnalisés que je n'aurais même pas pris la peine de lire moi-même : <br> cliquez-ici.</p>
                     <p>Pour une lettre de motivation intégralement générée en 0,27 secondes via une IA quelconque comme certainement 95% des lettres que vous recevez maintenant: <br> cliquez-ici.</p>
                     <p>Pour réellement découvrir qui je suis, ce que je peux apporter à votre entreprise et pourquoi vous ne regretterez pas de m’embaucher : <br> cliquez-ici ou ici et engageons la conversation.</p>
@@ -39,10 +39,10 @@
             <div class="sidebar">
                 <ul>
                     <li><a href="index.html"><img src="images/home.svg" width="32" height="32" alt="Accueil"/><span class="infobulle" >Accueil</span></a></li>
-                    <li class="en_cours"><a href="competences.html" ><img src="images/competence.svg" width="32" height="32" alt="Compétences"/><span class="infobulle" >Compétences</span></a></li>
+                    <li><a href="competences.html" ><img src="images/competence.svg" width="32" height="32" alt="Compétences"/><span class="infobulle" >Compétences</span></a></li>
                     <li><a href="formations.html"><img src="images/formation.svg" width="32" height="32" alt="Formations"/><span class="infobulle" >Formations</span></a></li>
                     <li><a href="experiences.html"><img src="images/experience.svg" width="32" height="32" alt="Expériences"/><span class="infobulle" >Expériences</span></a></li>
-                    <li><a href="motivation.html"><img src="images/motivation.svg" width="32" height="32" alt="Motivation"/><span class="infobulle" >Motivation</span></a></li>
+                    <li class="en_cours"><a href="motivation.html"><img src="images/motivation.svg" width="32" height="32" alt="Motivation"/><span class="infobulle" >Motivation</span></a></li>
                     <li><a href="contact.html"><img src="images/contact.svg" width="32" height="32" alt="Contact"/><span class="infobulle" >Contact</span></a></li>
                 </ul>
                 <div class="sidebar_end"></div>
