--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
         <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
 		<title>Jessica Da Silva Cunha</title>
 	</head>
-	<body>	
-		<div class="container">
+	<body class="index-page">
+    <div class="global">
             <div class="wrap_content">
                 <div class="etat_civil">
                     <div class="avatar">
@@ -16,8 +16,7 @@
                     <div>
                         <h1>Jessica Da Silva Cunha</h1>
                         <p class="civil"></p>
-                        <!--<a href="https://www.linkedin.com/in/jessica-da-silva-cunha-715999180/"><img src="images/lk.png" alt="linkedin" width="30" height="25" class="civil"></a>
-                        <a href="https://github.com/JessicaDaSilvaC"><img src="images/github.png" alt="GitHub" width="30" height="25" class="civil"></a>-->
+                        <!--<a href="https://www.linkedin.com/in/jessica-da-silva-cunha-715999180/"><img src="images/lk.png" alt="linkedin" width="30" height="25" class="civil"></a>-->
                         <a href="CV.pdf" download="CV Jessica Da Silva Cunha"><img src="images/telecharger.svg" alt="CV" width="30" height="25" class="civil"></a>
                     </div>
                 </div>
