--- a/index.html
+++ b/index.html
@@ -23,11 +23,11 @@
                 <div class="about">
                     <h2 class="me">À propos de moi</h2>
                     <div class="info">
-                        <h3>Présentation</h3>
+                        <br><h3>Présentation</h3>
                         <p>À la recherche d’un poste en comptabilité 100 % télétravail. Reconnue travailleuse handicapée – mon corps aime le confort de la maison, mais ma rigueur, ma curiosité et ma motivation vont toujours plus loin. Organisée, adaptable, et passionnée par l’analyse, je cherche un poste stimulant, humain et compatible avec une vie équilibrée.</p>
                     </div>
                     <div class="info">
-                        <h3>Informations personnelles</h3>
+                        <br><h3>Informations personnelles</h3>
                         <div class="cont_info">
                             <div class="crt_info">
                                 <ul class="perso">
@@ -45,7 +45,7 @@
                     </div>
                     <div class="soft">
                         <div class="skill">
-                            <h3>Soft skill</h3>
+                            <br><h3>Soft skill</h3>
                             <ul class="perso">
                                 <li><img src="images/ok.svg" width="25" height="25"> Sens de l'organisation</li>
                                 <li><img src="images/ok.svg" width="25" height="25"> Autonome</li>
@@ -53,7 +53,7 @@
                         </ul>
                         </div>
                         <div class="valeur">
-                            <h3>Valeurs professionnelles</h3>
+                            <br><h3>Valeurs professionnelles</h3>
                             <ul class="persos">
                                 <li><img src="images/ok.svg" width="25" height="25"> Stimulation intellectuel</li>
                                 <li><img src="images/ok.svg" width="25" height="25"> L'amélioration continue</li>
@@ -63,7 +63,7 @@
                     </div>
                     <div class="soft">
                         <div class="loisirs">
-                            <h3>loisirs</h3>
+                            <br><h3>loisirs</h3>
                             <div class="cont_loisir">
                                 <div class="crt_loisir">
                                     <ul class="perso">
