--- a/competences.html
+++ b/competences.html
@@ -39,7 +39,7 @@
                                 <p>Accueil physique</p>
                                 <p>Accueil téléphonique</p>
                                 <p>Gestion courrier/courriel</p>
-                                <p>Création et gestion dossier</p>                    
+                                <p>Création et gestion de dossier</p>                    
                             </div>
                         </li>
                         <li>
@@ -49,21 +49,21 @@
                             <div class="content">
                                 <p>Établir des factures</p>
                                 <p>Vérification BC/BL/facture</p>
-                                <p>Établir excercices comptables</p>   
+                                <p>Établir des exercices comptables</p>   
                                 <p>Rapprochement BC/BL/facture</p>     
                                 <p>Codifier et saisir des factures</p>            
                             </div>
                         </li>
                         <li>
                             <div class='time'>
-                                <h3>Ressoursces Humaines</h3>
+                                <h3>Ressources Humaines</h3>
                             </div>
                             <div class="content">
-                                <p>Sélectionner et reevoir un candidat </p>
-                                <p>Établissement des contrts TT, paie et <br> facture</p>
-                                <p>Gestion des arrêts maladies et <br> accidents de travail</p>
-                                <p>Gestion de la communications <br> internes et externes</p>
-                                <p>Gestion de divers suivis et plannigs</p>
+                                <p>Sélectionner et revoir un candidat </p>
+                                <p>Établissement des contrats TT, paie et <br> facture</p>
+                                <p>Gestion des arrêts maladie et <br> accidents de travail</p>
+                                <p>Gestion de la communication <br> interne et externe</p>
+                                <p>Gestion de divers suivis et plannings</p>
                             </div>
                         </li>
                         <li>
