--- a/formations.html
+++ b/formations.html
@@ -59,7 +59,7 @@
                                 <span>De 2014 à 2015</span>
                             </div>
                             <div class="content">
-                                <h3>Employé administratif et accueil <br>(option comptabilité)</h3>
+                                <h3>Employée administrative et d'accueil <br>(option comptabilité)</h3>
                                 <p>Greta Besançon (25)</p>           
                             </div>
                         </li>
