--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                     <h2 class="me">À propos de moi</h2>
                     <div class="info">
                         <br><h3>Présentation</h3>
-                        <p>À la recherche d’un poste en comptabilité 100 % télétravail. Reconnue travailleuse handicapée – mon corps aime le confort de la maison, mais ma rigueur, ma curiosité et ma motivation vont toujours plus loin. Organisée, adaptable, et passionnée par l’analyse, je cherche un poste stimulant, humain et compatible avec une vie équilibrée.</p>
+                        <p>Reconnue travailleuse handicapée, je suis à la recherche d’une PMSMP (Période de Mise en Situation en Milieu Professionel) <!--poste--> en comptabilité 100 % télétravail. Mon corps aime le confort de la maison, mais ma rigueur, ma curiosité et ma motivation vont toujours plus loin. Organisée, adaptable, et passionnée par l’analyse, je cherche un poste stimulant, humain et compatible avec une vie équilibrée.</p>
                     </div>
                     <div class="info">
                         <br><h3>Informations personnelles</h3>
@@ -37,8 +37,8 @@
                             </div>
                             <div class="crt_infos">
                                 <ul class="persos">
-                                <li><img src="images/ok.svg" width="25" height="25"> Accepte télétravail uniquement</li>
-                                <li><img src="images/ok.svg" width="25" height="25"> Éligible aux aides de l'état et de l'agefiph concernants les contrats MDPH</li>
+                                <li><img src="images/ok.svg" width="25" height="25"> Accepte uniquement le Télétravail</li>
+                                <li><img src="images/ok.svg" width="25" height="25"> Éligible aux aides de l'État et de l'agefiph concernants les RQTH</li>
                             </ul>
                             </div>
                         </div>                        
@@ -55,7 +55,7 @@
                         <div class="valeur">
                             <br><h3>Valeurs professionnelles</h3>
                             <ul class="persos">
-                                <li><img src="images/ok.svg" width="25" height="25"> Stimulation intellectuel</li>
+                                <li><img src="images/ok.svg" width="25" height="25"> Stimulation intellectuelle</li>
                                 <li><img src="images/ok.svg" width="25" height="25"> L'amélioration continue</li>
                                 <li><img src="images/ok.svg" width="25" height="25"> L'autonomie </li>
                             </ul>                        
