--- a/motivation.html
+++ b/motivation.html
@@ -29,8 +29,8 @@
 		            <br><p>Madame, Monsieur,</p><br>
                     <p>Pour une lettre de motivation fade et remplie de clichés que je suis censée écrire parce que c’est la norme :<br><a href="lm_moi.pdf" target="_blank"> Cliquez ici</a></p><br>
                     <p>Pour une lettre de motivation à moitié copiée sur Google avec des modèles gratuits semi-personnalisés que je n'aurais même pas pris la peine de lire moi-même : <br><a href="lm_google.pdf" target="_blank"> Cliquez ici</a></p><br>
-                    <p>Pour une lettre de motivation intégralement générée en 0,27 secondes via une IA quelconque comme certainement 95% des lettres que vous recevez maintenant:<br><a href="lm_ia.pdf" target="_blank"> Cliquez ici</a></p><br>
-                    <p>Pour réellement découvrir qui je suis, ce que je peux apporter à votre entreprise et pourquoi vous ne regretterez pas de m’embaucher : <br><a href="mailto:dasilvacjessica@gmail.com"> cliquez-ici</a>  ou<a href="tel:0638048442"> ici</a> et engageons la conversation.</p><br>
+                    <p>Pour une lettre de motivation intégralement générée en 0,27 secondes via une IA quelconque comme certainement 95% des lettres que vous recevez maintenant :<br><a href="lm_ia.pdf" target="_blank"> Cliquez ici</a></p><br>
+                    <p>Pour réellement découvrir qui je suis, ce que je peux apporter à votre entreprise et pourquoi vous ne regretterez pas de m’embaucher : <br><a href="mailto:dasilvacjessica@gmail.com"> Cliquez-ici</a>  ou<a href="tel:0638048442"> ici</a> et engageons la conversation.</p><br>
                     <p>Vous savez aussi bien que moi, nous en apprendrons bien plus en 3 minutes de discussion qu’à travers des pages de banalités.</p><br>
                     <p>À très bientôt j’espère !</p>
                 </div>
