--- a/experiences.html
+++ b/experiences.html
@@ -38,7 +38,7 @@
 			            </li>
                         <li>
                             <div class='time'>
-                                <span>CIP</span>
+                                <span>Conseillère en Insertion Professionnelle</span>
                             </div>
                             <div class="content">
                                 <h3>De 2023 à 2024</h3>
