--- a/portfolio.html
+++ b/portfolio.html
@@ -23,7 +23,8 @@
                 </div>
             </div>
         </div>
-        <div class="container">
+        <img src="images/travaux.jpg" alt="Travaux" class="travaux">
+        <!--<div class="container">
             <div class="wrap_content">
                 <div class="crt-container-sm">
                     <div class="crt-paper-layers">
@@ -49,7 +50,7 @@
                             </div>
                         </div>
                     </div>
-                </div>
+                </div>-->
             <div class="sidebar">
                 <ul>
                     <li>
