--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                     <h2 class="me">À propos de moi</h2>
                     <div class="info">
                         <br><h3>Présentation</h3>
-                        <p>Reconnue travailleuse handicapée, je suis à la recherche d’une PMSMP (Période de Mise en Situation en Milieu Professionnel) <!--poste--> en comptabilité 100 % télétravail. Mon corps aime le confort de la maison, mais ma rigueur, ma curiosité et ma motivation vont toujours plus loin. Organisée, adaptable, et passionnée par l’analyse, je cherche un poste stimulant, humain et compatible avec une vie équilibrée.</p>
+                        <p>Reconnue travailleuse handicapée, je suis à la recherche d’une PMSMP (Période de Mise en Situation en Milieu Professionnel) <!--poste--> en comptabilité. <!--100 % télétravail. Mon corps aime le confort de la maison, mais ma rigueur, ma curiosité et ma motivation vont toujours plus loin.--> Organisée, adaptable, et passionnée par l’analyse, je cherche un poste stimulant, humain et compatible avec une vie équilibrée.</p>
                     </div>
                     <div class="info">
                         <br><h3>Informations personnelles</h3>
